--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -135,6 +135,14 @@ $navbar-profile-border-width: 2px;
   }
 }
 
+.triche   {
+
+        background: rgba(0, 0, 0, 0.7);
+        box-shadow: 0 0 2px black;
+        height: 60px;
+        position: relative;
+}
+
 /* -------------------------------------
  * Navbar profile picture
  * ------------------------------------- */
