--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<div class ="triche"></div>
 <h2 class = "text-center">Edit <%= resource_name.to_s.humanize %></h2>
 <div class = "edit-box">
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
