--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
+<div class ="triche"></div>
+<div class="text-center separation">
+  <h1>Mon profil</h1>
+</div>
 <div class="container">
   <div class="row">
     <div class="col-md-4">
